<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GuessTheNumber.activities.GuessTheNumberSelectDifficultyActivity">

    <Button
        android:id="@+id/mediumButton"
        android:layout_width="92dp"
        android:layout_height="38dp"
        android:onClick="mediumDifficultyClick"
        android:text="@string/mediumButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/medium"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="@+id/medium"
        app:layout_constraintTop_toBottomOf="@+id/medium"
        app:layout_constraintVertical_bias="0.050000012" />

    <Button
        android:id="@+id/insaneButton"
        android:layout_width="92dp"
        android:layout_height="38dp"
        android:onClick="insaneDifficultyClick"
        android:text="@string/insaneButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mediumButton"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/mediumButton"
        app:layout_constraintTop_toBottomOf="@+id/insane"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/selectDiffBlurb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diffBlurb"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <TextView
        android:id="@+id/textView54"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/easyGTN"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <TextView
        android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/GTNmedium"
        app:layout_constraintEnd_toEndOf="@+id/textView54"
        app:layout_constraintStart_toStartOf="@+id/textView54"
        app:layout_constraintTop_toBottomOf="@+id/textView54" />

    <TextView
        android:id="@+id/insane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/insaneGTN"
        app:layout_constraintEnd_toEndOf="@+id/medium"
        app:layout_constraintStart_toStartOf="@+id/medium"
        app:layout_constraintTop_toBottomOf="@+id/medium" />

    <Button
        android:id="@+id/easyButton"
        android:layout_width="92dp"
        android:layout_height="38dp"
        android:onClick="easyDifficultyClick"
        android:text="@string/easyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mediumButton"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/mediumButton"
        app:layout_constraintTop_toBottomOf="@+id/textView54"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/currDiff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currDiff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.218"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18" />

    <TextView
        android:id="@+id/currDiffLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="116dp"
        android:text="@string/defaultDiff"
        app:layout_constraintBaseline_toBaselineOf="@+id/currDiff"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="84dp"
        android:layout_height="37dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:onClick="backClick"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>