<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_one_to_fifty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_conversion_absoluteHeight="19dp"
        tools:layout_conversion_absoluteWidth="411dp"
        tools:layout_editor_absoluteY="253dp" />

    <EditText
        android:id="@+id/submitGuess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:editable="true"
        android:ems="10"
        android:hint="@string/enter_guess_here"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_guesses"
        tools:layout_editor_absoluteX="202dp"
        tools:layout_editor_absoluteY="26dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_the_number_points"
        tools:layout_editor_absoluteX="284dp"
        tools:layout_editor_absoluteY="62dp" />

    <TextView
        android:id="@+id/numOfGuessesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/num_of_guesses_value"
        tools:layout_editor_absoluteX="359dp"
        tools:layout_editor_absoluteY="26dp" />

    <TextView
        android:id="@+id/numOfPointsValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="359dp"
        tools:layout_editor_absoluteY="62dp" />

    <Button
        android:id="@+id/submitGuessButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitGuess"
        android:text="@string/submit_button"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="366dp" />

</androidx.constraintlayout.widget.ConstraintLayout>